Frontend in progress...

--- a/workspace/timetable/timetable-web-frontend/src/main/frontend/src/index.html
+++ b/workspace/timetable/timetable-web-frontend/src/main/frontend/src/index.html
@@ -9,6 +9,7 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <app-root>Loading...</app-root>
+  <login>Login...</login>
+  <professional-registration>Showing professional registration view...</professional-registration>
 </body>
 </html>
