--- a/workspace/timetable/timetable-web-frontend/src/main/frontend/src/index.html
+++ b/workspace/timetable/timetable-web-frontend/src/main/frontend/src/index.html
@@ -1,15 +1,16 @@
 <!doctype html>
 <html>
 <head>
-  <meta charset="utf-8">
-  <title>Timetable</title>
-  <base href="/">
+<meta charset="utf-8">
+<title>Timetable</title>
+<base href="/">
 
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <login>Login...</login>
-  <professional-registration>Showing professional registration view...</professional-registration>
+	<login>Login...</login>
+	<professional-registration>Showing professional registration view...</professional-registration>
+	<time-slot>Time slot</time-slot>
 </body>
 </html>
