Add working day component

--- a/workspace/timetable/timetable-web-frontend/src/main/frontend/src/index.html
+++ b/workspace/timetable/timetable-web-frontend/src/main/frontend/src/index.html
@@ -9,8 +9,11 @@
 <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-	<login>Login...</login>
-	<professional-registration>Showing professional registration view...</professional-registration>
-	<time-slot>Time slot</time-slot>
+	<div class="form-group">
+		<div><login>Login...</login></div>
+		<div><professional-registration>Showing professional registration view...</professional-registration></div>
+		<div><working-day>Working day</working-day></div>
+		<div><time-slot>Time slot</time-slot></div>
+	</div>
 </body>
 </html>
