Angular2: Global layout

--- a/workspace/timetable/timetable-web-frontend/src/main/frontend/src/index.html
+++ b/workspace/timetable/timetable-web-frontend/src/main/frontend/src/index.html
@@ -1,19 +1,13 @@
 <!doctype html>
 <html>
-<head>
-<meta charset="utf-8">
-<title>Timetable</title>
-<base href="/">
-
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="icon" type="image/x-icon" href="favicon.ico">
-</head>
-<body>
-	<div class="form-group">
-		<div><login>Login...</login></div>
-		<div><professional-registration>Showing professional registration view...</professional-registration></div>
-		<div><working-day>Working day</working-day></div>
-		<div><time-slot>Time slot</time-slot></div>
-	</div>
-</body>
+	<head>
+		<meta charset="utf-8">
+		<title>Timetable</title>
+		<base href="/">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<link rel="icon" type="image/x-icon" href="favicon.ico">
+	</head>
+	<body>
+		<app-root>loading...</app-root>
+	</body>
 </html>
